--- a/src/index.css
+++ b/src/index.css
@@ -134,3 +134,9 @@
   width: 100%;
   height: 100%;
 }
+.error-text {
+  color: #e74c3c;
+  font-size: 13px;
+  margin-bottom: 10px;
+  text-align: center;
+}
